versioned_docs/version-0.10/samples/python.mdx
---
title: Getting Started on Okteto Cloud with Python
description: This tutorial will show you how to develop a Python sample application
sidebar_label: Python
id: python
---

import Image from '@theme/Image';

[Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) gives instant access to secure Kubernetes namespaces to enable developers to code, build, and run Kubernetes applications entirely in the cloud.

This tutorial will show you how to develop and debug a Python sample application running in Okteto Cloud.

## Prerequisites

- Install the Okteto CLI (>= 1.12.13). Follow this [guide](/docs/0.10/cloud/okteto-cli/) if you haven't done it yet.
- Configure Access to your Okteto Cloud Namespace [using the Okteto CLI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-using-the-okteto-cli) or [using the Okteto Cloud UI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-from-the-okteto-cloud-ui).


## Step 1: Deploy the Python Sample App

Get a local version of the Python Sample App by executing the following commands:

```console
$ git clone https://github.com/okteto/python-getting-started
$ cd python-getting-started
```

The `k8s.yml` file contains the [Kubernetes manifests](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/) of the Python Sample App.
Deploy a dev version of the application by executing:

```console
$ kubectl apply -f k8s.yml
```

```console
deployment.apps "hello-world" created
service "hello-world" created
```

Log into [Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) and click on the URL of the application:

<Image center src="/docs/samples/images/okteto-ui.png" alt="Okteto Cloud UI Python" width="850" />

Did you notice that you're accessing your application through an HTTPs endpoint? This is because Okteto Cloud will [automatically create them](/docs/0.10/cloud/ssl/) for you when you deploy your application. Cool no 😎?

## Step 2: Create your okteto manifest

To start developing on the Python Sample App you first need to create an okteto manifest.
With the Python Sample App deployed, run the following command to create your [okteto manifest](/docs/0.10/reference/manifest/):

```console
$ okteto init
```

```console
This command walks you through creating an okteto manifest.
It only covers the most common items, and tries to guess sensible defaults.
See https://okteto.com/docs/reference/manifest for the official documentation about the okteto manifest.
Use the arrow keys to navigate: ↓ ↑ → ←
Select the deployment you want to develop:
  ▸ hello-world
    Use default values
```

The `okteto init` command will scan the available deployments in your Kubernetes namespace and ask you to pick one.
Select the `hello-world` deployment. It's the one we deployed on the previous step.

```console
 ✓  hello-world
 ✓  Deployment 'hello-world' successfully analyzed
 ✓  okteto manifest (okteto.yml) created
 i  Run 'okteto up' to activate your development container
```

The `okteto init` command creates the following `okteto.yml` file:

```yaml
name: hello-world
command: bash
volumes:
  - /root/.cache/pip
sync:
  - .:/usr/src/app
forward:
  - 8080:8080
reverse:
  - 9000:9000
```

This file defines how to activate a development container for the Python Sample App:

- `name`: the name of the Kubernetes deployment you want to put on development mode
- `command`: the start command of the development container
- `volumes`: a list of paths in your development container to be mounted as persistent volumes. This is useful to persist the pip cache.
- `sync`: the folders that will be synchronized between your local machine and the development container
- `forward`: a list of ports to forward from your development container
- `reverse`: a list of ports to reverse forward from your development container to your local machine

Also, the `okteto init` command creates a `.stignore` file to indicate which files shouldn't be synchronized to your development container.
This is useful to avoid virtual environments, build artifacts, or git metadata.

## Step 3: Activate your development container

Next, execute the following command to activate your development container:

```console
$ okteto up
```

```console
 ✓  Persistent volume successfully attached
 ✓  Images successfully pulled
 ✓  Files synchronized
    Namespace: cindy
    Name:      hello-world
    Forward:   8080 -> 8080
    Reverse:   9000 <- 9000

Welcome to your development container. Happy coding!
cindy:hello-world app>
```

Working in your development container is the same as working on your local machine.
Start the application in development mode by running the following command:

```console
cindy:hello-world app> python app.py
```

```console
Starting hello-world server...
 * Serving Flask app "app" (lazy loading)
 * Environment: development
 * Debug mode: on
 * Running on http://0.0.0.0:8080/ (Press CTRL+C to quit)
 ```

Go back to the browser and reload the page to test that your application is running.

## Step 4: Develop directly on Okteto Cloud

Open the `app.py` file in your favorite local IDE and modify the response message on line 7 to be *Hello world from the cluster!*.
Save your changes.

```python
@app.route('/')
def hello_world():
    return 'Hello World from the cluster!'
}
```

Okteto will synchronize your changes to your development container in Kubernetes.
Flask's auto-reloader will detect the changes automatically and restart the application with the new code.

```console
 * Detected change in '/usr/src/app/app.py', reloading
 * Restarting with stat
Starting hello-world server...
 * Debugger is active!
 * Debugger PIN: 308-916-374
```

Go back to the browser and reload the page. Your code changes were instantly applied. No commit, build, or push required 😎!

## Step 5: Debug directly in Okteto Cloud

Okteto enables you to debug your applications directly from your favorite IDE.
Let's take a look at how that works in one of python's most popular IDE's, [PyCharm](https://www.jetbrains.com/pycharm/).

> For VS Code users, this [document](https://code.visualstudio.com/docs/python/debugging#_debugging-by-attaching-over-a-network-connection) explains how to configure the debugger with `debugpy`.

First, open the project in PyCharm and remove the comments on `app.py` line `20`.

```python
if __name__ == '__main__':
  print('Starting hello-world server...')
  # comment out to use Pycharm's remote debugger
  attach()

  app.run(host='0.0.0.0', port=8080)
```

Second, launch the [Remote Debug Server](https://www.jetbrains.com/help/pycharm/remote-debugging-with-product.html) by clicking on the Debug button on the top right.
Ensure that the Debug Tool Window shows the `Waiting for process connection...` message. This message will be shown until you launch your app on the development container shell and it connects to the Debug Server.

```console
Starting hello-world server...
 * Serving Flask app "app" (lazy loading)
 * Environment: development
 * Debug mode: on
 * Running on http://0.0.0.0:8080/ (Press CTRL+C to quit)
 * Restarting with stat
Starting hello-world server...
Connecting to debugger...
```

On your local machine, switch to the Debug Tool Window. Once the app connects it will show the connection to the pydev debugger.
Press the `resume` button to let the execution continue.

<Image center src="/docs/samples/images/python-connected.png" alt="debugging with Python" width="850" />

Add a breakpoint on `app.py`, line 10. Go back to the browser and reload the page.

The execution will halt at your breakpoint. You can then inspect the request, the available variables, etc.

<Image center borderless src="/docs/samples/images/python-debug.png" alt="breakpoint in Python" width="850" />

Your code is executing in Okteto Cloud, but you can debug it from your local machine without any extra services or tools.
Pretty cool no? 😉

## Next steps

Congratulations, you just developed **your first application in Okteto Cloud** 🚀.

> Okteto lets you develop your applications directly on Kubernetes. This way you can:
> - Eliminate integration issues by developing in a realistic environment
> - Test your application end to end as fast as you type code
> - No more CPU cycles wasted in your machine. Develop at the speed of the cloud!

Ready to develop your application on Okteto Cloud? Read our [step by step tutorial](/docs/0.10/tutorials/getting-started-with-pipelines/) on how to configure an Okteto Pipeline to deploy realistic environments for your application in just one click.

Find more advanced samples with Okteto in [this repository](https://github.com/okteto/samples) or join our [#okteto](https://kubernetes.slack.com/messages/CM1QMQGS0/) channel in the [Kubernetes community Slack](http://slack.k8s.io/) to ask questions or share your feedback.
